Fix path to games

--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
 
     <main>
         <section class="grid" aria-label="Game selection">
-            <a class="game-card" href="/edugame">
+            <a class="game-card" href="edugame">
                 <div class="card-top">
                     <div class="icon" aria-hidden="true">🧠</div>
                     <div>
@@ -232,7 +232,7 @@
                 <span class="cta">Play now →</span>
             </a>
 
-            <a class="game-card" href="/voicetrainer">
+            <a class="game-card" href="voicetrainer">
                 <div class="card-top">
                     <div class="icon" aria-hidden="true">🎵</div>
                     <div>
